--- a/bsp/docs/latex/bsp__button__int_8h.tex
+++ b/bsp/docs/latex/bsp__button__int_8h.tex
@@ -1,6 +1,7 @@
 \hypertarget{bsp__button__int_8h}{}\doxysection{bsp\+\_\+button\+\_\+int.\+h File Reference}
 \label{bsp__button__int_8h}\index{bsp\_button\_int.h@{bsp\_button\_int.h}}
-{\ttfamily \#include \char`\"{}main.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}stm32l1xx\+\_\+hal.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}os.\+h\char`\"{}}\newline
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
