--- a/bsp/docs/latex/refman.tex
+++ b/bsp/docs/latex/refman.tex
@@ -191,8 +191,15 @@
 \input{bsp__button__int_8h}
 \input{bsp__clk_8c}
 \input{bsp__clk_8h}
+\input{bsp__led_8c}
 \input{bsp__led_8h}
+\input{bsp__max4466_8c}
 \input{bsp__max4466_8h}
+\input{bsp__ssd1306_8c}
+\input{bsp__ssd1306_8h}
+\input{bsp__ssd1306__cfg_8c}
+\input{bsp__ssd1306__cfg_8h}
+\input{bsp__ssd1306__fonts_8h}
 \input{bsp__usart_8h}
 %--- End generated contents ---
 
