--- a/bsp/docs/latex/files.tex
+++ b/bsp/docs/latex/files.tex
@@ -9,10 +9,15 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{\mbox{\hyperlink{bsp__button__int_8h}{bsp\+\_\+button\+\_\+int.\+h}} }{\pageref{bsp__button__int_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{bsp__clk_8c}{bsp\+\_\+clk.\+c}} }{\pageref{bsp__clk_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{bsp__clk_8h}{bsp\+\_\+clk.\+h}} }{\pageref{bsp__clk_8h}}{}
-\item\contentsline{section}{{\bfseries bsp\+\_\+led.\+c} }{\pageref{bsp__led_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__led_8c}{bsp\+\_\+led.\+c}} }{\pageref{bsp__led_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{bsp__led_8h}{bsp\+\_\+led.\+h}} }{\pageref{bsp__led_8h}}{}
-\item\contentsline{section}{{\bfseries bsp\+\_\+max4466.\+c} }{\pageref{bsp__max4466_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__max4466_8c}{bsp\+\_\+max4466.\+c}} }{\pageref{bsp__max4466_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{bsp__max4466_8h}{bsp\+\_\+max4466.\+h}} }{\pageref{bsp__max4466_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__ssd1306_8c}{bsp\+\_\+ssd1306.\+c}} }{\pageref{bsp__ssd1306_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__ssd1306_8h}{bsp\+\_\+ssd1306.\+h}} }{\pageref{bsp__ssd1306_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__ssd1306__cfg_8c}{bsp\+\_\+ssd1306\+\_\+cfg.\+c}} \\*Functions that should be modified when porting to differrent target devices }{\pageref{bsp__ssd1306__cfg_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__ssd1306__cfg_8h}{bsp\+\_\+ssd1306\+\_\+cfg.\+h}} }{\pageref{bsp__ssd1306__cfg_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{bsp__ssd1306__fonts_8h}{bsp\+\_\+ssd1306\+\_\+fonts.\+h}} \\*Contain font for SSD1306 }{\pageref{bsp__ssd1306__fonts_8h}}{}
 \item\contentsline{section}{{\bfseries bsp\+\_\+usart.\+c} }{\pageref{bsp__usart_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{bsp__usart_8h}{bsp\+\_\+usart.\+h}} }{\pageref{bsp__usart_8h}}{}
 \end{DoxyCompactList}
